[package]
name          = "cbor-codec-plus"
version       = "0.8.0"
authors       = ["Toralf Wittner <tw@dtex.org>"]
edition       = "2021"
license       = "MPL-2.0"
description   = "CBOR Codec implementation"
repository    = "https://gitlab.com/twittner/cbor-codec"
documentation = "https://twittner.gitlab.io/cbor-codec/cbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]

[lib]
name = "cbor"

[features]
random = ["quickcheck"]

[dependencies]
byteorder = "1.5"

[dependencies.quickcheck]
version  = "1"
optional = true

[dev-dependencies]
json-codec        = "0.5"
quickcheck        = "1"
quickcheck_macros = "1"
rand              = "0.8"
rustc-serialize   = "0.3"

[[test]]
name = "tests"
path = "tests/lib.rs"
